--- a/Assets/Wwise/LauncherInfo.json
+++ b/Assets/Wwise/LauncherInfo.json
@@ -1,13 +1,29 @@
 {
-    "originalSdkFolder": "/Applications/Audiokinetic/Wwise 2021.1.7.7796/SDK",
+    "originalSdkFolder": "/Applications/Audiokinetic/Wwise 2021.1.8.7831/SDK",
     "currentVersion": {
-        "build": 2335,
+        "build": 2373,
         "major": 1,
-        "minor": 7,
+        "minor": 8,
         "nickname": "",
         "year": 2021
     },
     "installedBundleGroups": [
+        {
+            "id": "Packages",
+            "valueId": "Unity"
+        },
+        {
+            "id": "Packages",
+            "valueId": "Extensions"
+        },
+        {
+            "id": "DeploymentPlatforms",
+            "valueId": "Mac"
+        },
+        {
+            "id": "DeploymentPlatforms",
+            "valueId": "Windows"
+        },
         {
             "id": "Packages",
             "valueId": "Unity"
